<resources>
    <string name="app_name">LCS</string>

    <string name="main_page_label">LCS - Main Page</string>
    <string name="login_page_label">LCS - Login Page</string>
    <string name="admin_page_label">LCS - Admin Page</string>
    <string name="checkout_page_label">LCS - Checkout Page</string>

    <string name="input_user_fragment_label">LCS - Input User Fragment</string>
    <string name="product_fragment_label">LCS - Input Product Fragment</string>
    <string name="lcs_input_item_button_label">LCS - Input Item</string>
    <string name="lcs_input_user_button_label">LCS - Input User</string>
    <string name="lcs_input_item_label">LCS - Input Item</string>
    <string name="lcs_input_user_label">LCS - Input User</string>

    <string name="hello_world">Hello World!</string>
    <string name="login_world">Hello Login&#8230;</string>
    <string name="admin_world">Hello Admin&#8230;</string>
    <string name="main_world">Hello Main&#8230;</string>

    <string name="title_login_page">LCS Login</string>
    <string name="title_rate_us_dialog">Rate Us&#8230;</string>
    <string name="title_activity_maps">Map</string>

    <string name="alert_init_shopping_cart_fail">ITEMS database returned no data.\n
        Unable to initialize Shopping Cart.
    </string>

    <string name="username_title">Username</string>
    <string name="username_hint">Username or Email Address</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Password</string>
    <string name="linkedin_button_label">Login with LinkedIn</string>
    <string name="first_time_user">First time user&#8230;</string>
    <string name="preference_deleted">Preference deleted.</string>
    <string name="no_preference_removed">No preference removed.</string>

    <string name="users_db_closed">Users database closed.</string>
    <string name="items_db_closed">Items database closed.</string>
    <string name="error">Error:</string>
    <string name="db_active">database active.</string>
    <string name="db_open">database open.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_item_frag">inputProductFragment</string>
    <string name="input_user_frag">inputUserFragment</string>
    <string name="re_login">Re-Login</string>
    <string name="input_user">Users</string>
    <string name="input_item">Items</string>
    <string name="add_item_button_label">Add Item</string>

    <string name="u_incorrect">Username not found</string>
    <string name="p_incorrect">Password not correct</string>
    <string name="u_p_correct">Username/Password correct</string>
    <string name="u_p_not_blank">Username/Password cannot be blank</string>
    <string name="admin_selected">Admin Selected&#8230;</string>
    <string name="item_added">Item record added.</string>
    <string name="db_insert_error">Database insert failed, Record not added.</string>
    <string name="toast_database_no_data">USERS database returned no data.</string>

    <string name="string_welcome_prefix">Welcome:</string>
    <string name="string_unknown_user">Unknown User</string>

    <string name="about_us_popup">Welcome to your Local Coffee Shop app\n\n
        We are a small group of coffee and Android programming fanatics.\n\n
        We have created this app in answer to a perceived CS-360 need.\n\n
        Use the buttons below to email or voice-call us, if you dare&#8230;\n\n
        And we would like to thank you for your support,
        especially our family and friends and, of course, our professor.
    </string>

    <string name="rate_us_description">Use this page to let the world know about us.\n\n
        If you like us, please rate us well.\n\n
        You can also use this page to let your friends on Twitter know about us.\n\n
        Thank you
    </string>

    <string name="button_label_add">Add</string>
    <string name="button_label_update">Update</string>
    <string name="button_label_delete">Delete</string>
    <string name="button_label_back">Back</string>
    <string name="button_label_clear">Clear</string>
    <string name="button_label_button">Button</string>
    <string name="button_label_get_directions">Get Directions</string>
    <string name="button_label_driving">Driving</string>
    <string name="button_label_walking">Walking</string>
    <string name="button_label_find_us_map">Find Us / Map</string>
    <string name="button_label_save_favorite">Save Favorite</string>
    <string name="button_label_place_order">Place Order</string>
    <string name="button_label_favorite_order">Favorite Order</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_enter_password"><font size="10">Enter Password</font></string>
    <string name="prompt_username">Username</string>
    <string name="prompt_enter_username"><font size="10">Enter Username</font></string>
    <string name="prompt_email_addr">Email Addr</string>
    <string name="prompt_enter_email_addr"><font size="10">user@domain.ext</font></string>
    <string name="prompt_cc_number">CC Number</string>
    <string name="prompt_enter_cc_number"><font size="10">15 or 16 digits, no dashes</font></string>
    <string name="prompt_cvv_number">CVV Number</string>
    <string name="prompt_enter_cvv_number"><font size="10">3 or 4 digits</font></string>
    <string name="prompt_expire">Expiration</string>
    <string name="prompt_enter_expire"><font size="10">mm/yy</font></string>
    <string name="prompt_item_name">Item Name</string>
    <string name="prompt_enter_item_name">Item Name</string>
    <string name="prompt_item_price">Item Price</string>
    <string name="prompt_enter_item_price">Item Price</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="prompt_quantity">Quantity?</string>

    <string name="label_contact_us">Contact Us&#8230;</string>
    <string name="label_send_us_email1">To send us an email, send it to:</string>
    <string name="label_send_us_email2">LCS@lcs.com</string>
    <string name="label_call_us1">Or else give us a ring at:</string>
    <string name="label_call_us2">800&#8211;555&#8211;1212</string>
    <string name="label_placeholder">Placeholder</string>
    <string name="label_login_trys">Login Trys</string>
    <string name="label_google_sign_in">Sign-In with Google</string>
    <string name="label_submit">Floting Submit</string>
    <string name="label_view_cart">View Cart</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_empty_cart">Empty Cart</string>
    <string name="label_go_back">Go Back</string>
    <string name="label_checkout_and_pay">Checkout and Pay</string>
    <string name="label_current_shopping_cart">Current Shopping Cart</string>
    <string name="label_item">Item</string>
    <string name="label_price">Price</string>
    <string name="label_qty">Qty</string>
    <string name="label_total">Total</string>
    <string name="label_total_price">Total Price:  </string>
    <string name="label_quantity">Quantity</string>
    <string name="label_item_spacer">-------------------------</string>
    <string name="label_short_spacer">-----</string>
    <string name="separator_line">-------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="label_chk_out_instruct">To use the stored credit card information enter the CVV for security purposes. Otherwise, enter all the information from a different credit card.</string>
    <string name="label_chkout_total_price">This order, Total Price:</string>

</resources>
