<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout_Cart_Items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FCFCFC"
    tools:context="com.cs360.michaelmesnikoff.lcs.MainActivity"
    tools:ignore="ScrollViewSize">

    <TextView
        android:id="@+id/textView_Cart_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/label_current_shopping_cart"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TableRow
        android:id="@+id/tableRow_Cart_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Cart_ItemHeader"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_weight="1"
            android:text="@string/label_item"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_PriceHeader"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_price"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_QtyHeader"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_qty"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_TotalHeader"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_weight="1"
            android:text="@string/label_total"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_Cart_Divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Cart_D1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_item_spacer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_D2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_short_spacer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_D3"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_short_spacer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Cart_D4"
            android:layout_width="35dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_short_spacer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>