<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCC"
    tools:context="com.cs360.michaelmesnikoff.lcs.AdminActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/product_fragment_label"
        android:textColor="#fff"
        android:textSize="25sp"
        android:visibility="invisible" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout_buttonBar"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_Add"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_label_add"
                android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_Update"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_label_update"
                android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_Delete"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_label_delete"
                android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_Back"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="returnFromFragment"
                android:text="@string/button_label_back"
                android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_username_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/prompt_item_name"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_buttonBar" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="240dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:background="#FFF"
            android:ems="10"
            android:hint="@string/prompt_enter_item_name"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_buttonBar" />

        <TextView
            android:id="@+id/textView_itemPrice_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/prompt_item_price"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_username_prompt" />

        <EditText
            android:id="@+id/editText_itemPrice"
            android:layout_width="132dp"
            android:layout_height="25dp"
            android:layout_marginEnd="124dp"
            android:layout_marginTop="12dp"
            android:background="#FFF"
            android:ems="10"
            android:hint="@string/prompt_enter_item_price"
            android:inputType="numberDecimal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_username" />

        <EditText
            android:id="@+id/editText_itemID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="8sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_username"
            tools:ignore="LabelFor,SmallSp,TextFields" />

        <LinearLayout
            android:id="@+id/linearLayout_tableWrapper"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:layout_marginTop="132dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="250dp"
                android:layout_height="300dp">

                <TableLayout
                    android:id="@+id/tableLayout_Items"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ScrollViewSize">
                </TableLayout>
            </ScrollView>

            <Button
                android:id="@+id/button_Clear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_label_clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/testBut"
                style="@android:style/Widget.Button.Small"
                android:layout_width="31dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="#FFF"
                android:onClick="returnFromFragment"
                android:text="@string/button_label_button"
                android:textAlignment="textStart"
                android:textColor="#000"
                android:visibility="invisible" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
