<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_Cart_Outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FCFCFC"
    tools:context="com.cs360.michaelmesnikoff.lcs.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout_Cart_CL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout_Cart_Items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/textView_Cart_Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/label_current_shopping_cart"
                android:textAlignment="center"
                android:textColor="#0000FF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_Cart_ItemHeader"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_item"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_Cart_PriceHeader"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_price"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_Cart_QtyHeader"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_qty"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_Cart_TotalHeader"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_total"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_item_spacer"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_short_spacer"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_short_spacer"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_short_spacer"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </TableRow>

            <ImageButton
                android:id="@+id/imageButton_Cart_Back"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/go_back_icon"
                tools:ignore="ContentDescription" />

        </TableLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>