<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_ContactUs"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_margin="20dp"
    android:animateLayoutChanges="true"
    android:background="#CFCFCF"
    android:backgroundTint="#CFCFCF">

    <TextView
        android:id="@+id/textView_ContactUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_contact_us"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Email"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onEmailClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_action_email"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView_EmailLabel"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:onClick="onEmailClick"
        android:focusable="true"
        android:text="@string/label_send_us_email1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="116dp"
        android:clickable="true"
        android:onClick="onEmailClick"
        android:focusable="true"
        android:text="@string/label_send_us_email2"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Telephone"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:onClick="onTelephoneClick"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Email"
        app:srcCompat="@drawable/telephone_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView_TelephoneLabel"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="176dp"
        android:clickable="true"
        android:onClick="onTelephoneClick"
        android:focusable="true"
        android:text="@string/label_call_us1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Telephone"
        android:layout_width="220dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="212dp"
        android:clickable="true"
        android:onClick="onTelephoneClick"
        android:focusable="true"
        android:text="@string/label_call_us2"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dialogImageButtonOK"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:background="#CFCFCF"
        android:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/go_back_icon"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>