<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF888888"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/myMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="1"
        tools:context="com.cs360.michaelmesnikoff.lcs.MapsActivity">
    </fragment>

    <LinearLayout
        android:id="@+id/layoutDirectionsLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGetDirectionsLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_label_get_directions"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#000000"
            tools:ignore="NestedWeights">
        </TextView>

        <LinearLayout
            android:id="@+id/layoutButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonDriving"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:text="@string/button_label_driving"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:src="@drawable/green_car"
                tools:ignore="ContentDescription">
            </ImageButton>


            <ImageButton
                android:id="@+id/buttonWalking"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/walking"
                android:text="@string/button_label_walking"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                tools:ignore="ContentDescription">
            </ImageButton>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>